kubectl/nginx/nginx-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
  - hosts:
      - example.com
    secretName: nginx-tls
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 80
